--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 
 
 </head>
-<body style="background-image:url(imagenes/inmo.png); background-repeat: no-repeat; background-size:100% 100%">
+<body style="background-image: url(https://www.noticiasinmobiliaria.com/wp-content/uploads/2020/03/Blog-AUCAL-2020-03-20T140827.967-820x410.jpg); background-repeat: no-repeat; background-size: 100% 100% ">
     <header>
 
         <div class="topnav">
