--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,10 +8,26 @@
 </div>
 <div class="row">
 
-    
+
 
     <ul>
         <h3><a class="nav-link" href="../Inmuebles/Disponibles">Ver Propiedades</a></h3>
+
+    </ul>
+    <ul>
+        <h3><a class="nav-link" href="../Propietarios">Ver Propietarios</a></h3>
+
+    </ul>
+    <ul>
+        <h3><a class="nav-link" href="../Inquilinos">Ver Inquilinos</a></h3>
+
+    </ul>
+    <ul>
+        <h3><a class="nav-link" href="../Contratos">Ver Contratos</a></h3>
+
+    </ul>
+    <ul>
+        <h3><a class="nav-link" href="../Pagos">Ver Pagos</a></h3>
 
     </ul>
 
