--- a/Views/Home/Restringido.cshtml
+++ b/Views/Home/Restringido.cshtml
@@ -2,4 +2,4 @@
 
 <h2>Restringido</h2>
 
-<h6 class="alert alert-danger"> ¡Ups! USTED NO TIENE PERMISO PARA ACCEDER !!!! <i class="fa fa-optin-monster fa-5x" aria-hidden="true"></i> </h6>
+<h6 class="alert alert-danger"> ¡Ups! USTED NO TIENE PERMISO PARA ACCEDER  , POR FAVOR LOGUESE!!!! <i class="fa fa-optin-monster fa-5x" aria-hidden="true"></i> </h6>
