--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 
         <div class="topnav">
 
-            <a class="active" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-university"></i> Inmobiliaria Donnatto</a>
+            <a class="active" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-university"></i> Inmobiliaria Noelia</a>
 
             <a asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-building-o"></i> Inicio</a>
             <a asp-area="" asp-controller="Usuarios" asp-action="Login"><i class="fa fa-sign-in"></i> Ingresar</a>
